--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,22 +103,22 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart" class="method navigator-link" hash-for-method="AddToCart">AddToCart</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="CheckoutAndBillingPaymentDelhivery">CheckoutAndBillingPaymentDelhivery</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart" class="method navigator-link" hash-for-method="CheckoutAndBillingPaymentDelhivery">CheckoutAndBillingPaymentDelhivery</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="GoToCartAndCheckout">GoToCartAndCheckout</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart" class="method navigator-link" hash-for-method="GoToCartAndCheckout">GoToCartAndCheckout</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="LoginPage">LoginPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart" class="method navigator-link" hash-for-method="LoginAccount">LoginAccount</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="SearchProduct">SearchProduct</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -136,16 +136,9 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart</span>
+              <span class="class-name">testCases.TC003_SearchToSimpleComputerToPurachaseOrder</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="AddToCart">
-                  </a> <!-- AddToCart -->
-                  <span class="method-name">AddToCart</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="CheckoutAndBillingPaymentDelhivery">
@@ -162,9 +155,16 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginAccount">
-                  </a> <!-- LoginAccount -->
-                  <span class="method-name">LoginAccount</span>
+                  <a name="LoginPage">
+                  </a> <!-- LoginPage -->
+                  <span class="method-name">LoginPage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="SearchProduct">
+                  </a> <!-- SearchProduct -->
+                  <span class="method-name">SearchProduct</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,7 +186,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart&quot;/&gt;
+      &lt;class name=&quot;testCases.TC003_SearchToSimpleComputerToPurachaseOrder&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -214,10 +214,6 @@
               <span class="test-group-name">Master</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">AddToCart</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
                 <span class="method-in-group-name">CheckoutAndBillingPaymentDelhivery</span>
                 <br/>
               </div> <!-- method-in-group -->
@@ -226,7 +222,11 @@
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginAccount</span>
+                <span class="method-in-group-name">LoginPage</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">SearchProduct</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -234,10 +234,6 @@
               <span class="test-group-name">Sanity</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">AddToCart</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
                 <span class="method-in-group-name">CheckoutAndBillingPaymentDelhivery</span>
                 <br/>
               </div> <!-- method-in-group -->
@@ -246,7 +242,11 @@
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginAccount</span>
+                <span class="method-in-group-name">LoginPage</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">SearchProduct</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -268,26 +268,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'CheckoutAndBillingPaymentDelhivery')
-data.setCell(0, 2, 'testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart')
-data.setCell(0, 3, 10379);
+data.setCell(0, 1, 'SearchProduct')
+data.setCell(0, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
+data.setCell(0, 3, 6710);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'AddToCart')
-data.setCell(1, 2, 'testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart')
-data.setCell(1, 3, 4143);
+data.setCell(1, 1, 'CheckoutAndBillingPaymentDelhivery')
+data.setCell(1, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
+data.setCell(1, 3, 4924);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'GoToCartAndCheckout')
-data.setCell(2, 2, 'testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart')
-data.setCell(2, 3, 2680);
+data.setCell(2, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
+data.setCell(2, 3, 2955);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'LoginAccount')
-data.setCell(3, 2, 'testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart')
-data.setCell(3, 3, 1721);
+data.setCell(3, 1, 'LoginPage')
+data.setCell(3, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
+data.setCell(3, 3, 2590);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 18 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -313,30 +313,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC002_SearchAndClickOnProductOfAutoSuggAndAddIntoCart</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC003_SearchToSimpleComputerToPurachaseOrder</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginAccount</span>
-                <span class="method-start">5834 ms</span>
+                <span class="method-name">LoginPage</span>
+                <span class="method-start">5628 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">AddToCart</span>
-                <span class="method-start">7616 ms</span>
+                <span class="method-name">SearchProduct</span>
+                <span class="method-start">8240 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">GoToCartAndCheckout</span>
-                <span class="method-start">11767 ms</span>
+                <span class="method-start">14953 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">CheckoutAndBillingPaymentDelhivery</span>
-                <span class="method-start">14462 ms</span>
+                <span class="method-start">17921 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">24866 ms</span>
+                <span class="method-start">22847 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
