--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">23,769</td><td></td><td></td></tr>
+<tr><td><a href="#t0">SearchToSimpleComputerToPurachaseOrder</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,225</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">testCases.TC003_SearchToSimpleComputerToPurachaseOrder</td><td><a href="#m0">CheckoutAndBillingPaymentDelhivery</a></td><td rowspan="1">1770691147473</td><td rowspan="1">4924</td></tr><tr class="passedeven"><td><a href="#m1">GoToCartAndCheckout</a></td><td rowspan="1">1770691144505</td><td rowspan="1">2955</td></tr><tr class="passedeven"><td><a href="#m2">LoginPage</a></td><td rowspan="1">1770691135180</td><td rowspan="1">2590</td></tr><tr class="passedeven"><td><a href="#m3">SearchProduct</a></td><td rowspan="1">1770691137792</td><td rowspan="1">6710</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SearchToSimpleComputerToPurachaseOrder &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testCases.TC005_ClearTheCart</td><td><a href="#m0">AddToCart</a></td><td rowspan="1">1770696924544</td><td rowspan="1">6084</td></tr><tr class="passedeven"><td><a href="#m1">GoToCartAndClear</a></td><td rowspan="1">1770696930665</td><td rowspan="1">2125</td></tr><tr class="passedeven"><td><a href="#m2">LoginTheSite</a></td><td rowspan="1">1770696922722</td><td rowspan="1">1789</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">testCases.TC003_SearchToSimpleComputerToPurachaseOrder#CheckoutAndBillingPaymentDelhivery</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.TC003_SearchToSimpleComputerToPurachaseOrder#GoToCartAndCheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testCases.TC003_SearchToSimpleComputerToPurachaseOrder#LoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testCases.TC003_SearchToSimpleComputerToPurachaseOrder#SearchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SearchToSimpleComputerToPurachaseOrder</h2><h3 id="m0">testCases.TC005_ClearTheCart#AddToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.TC005_ClearTheCart#GoToCartAndClear</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.TC005_ClearTheCart#LoginTheSite</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
