--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\actno\OneDrive\Desktop\SeleniumWebdriber\DemoWebShop\testng.xml</span>
+                    <span>C:\Users\actno\OneDrive\Desktop\SeleniumWebdriber\DemoWebShop\master.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,22 +103,17 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="CheckoutAndBillingPaymentDelhivery">CheckoutAndBillingPaymentDelhivery</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC005_ClearTheCart" class="method navigator-link" hash-for-method="AddToCart">AddToCart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="GoToCartAndCheckout">GoToCartAndCheckout</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC005_ClearTheCart" class="method navigator-link" hash-for-method="GoToCartAndClear">GoToCartAndClear</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="LoginPage">LoginPage</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC003_SearchToSimpleComputerToPurachaseOrder" class="method navigator-link" hash-for-method="SearchProduct">SearchProduct</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC005_ClearTheCart" class="method navigator-link" hash-for-method="LoginTheSite">LoginTheSite</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -136,35 +131,28 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC003_SearchToSimpleComputerToPurachaseOrder</span>
+              <span class="class-name">testCases.TC005_ClearTheCart</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CheckoutAndBillingPaymentDelhivery">
-                  </a> <!-- CheckoutAndBillingPaymentDelhivery -->
-                  <span class="method-name">CheckoutAndBillingPaymentDelhivery</span>
+                  <a name="AddToCart">
+                  </a> <!-- AddToCart -->
+                  <span class="method-name">AddToCart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="GoToCartAndCheckout">
-                  </a> <!-- GoToCartAndCheckout -->
-                  <span class="method-name">GoToCartAndCheckout</span>
+                  <a name="GoToCartAndClear">
+                  </a> <!-- GoToCartAndClear -->
+                  <span class="method-name">GoToCartAndClear</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginPage">
-                  </a> <!-- LoginPage -->
-                  <span class="method-name">LoginPage</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="SearchProduct">
-                  </a> <!-- SearchProduct -->
-                  <span class="method-name">SearchProduct</span>
+                  <a name="LoginTheSite">
+                  </a> <!-- LoginTheSite -->
+                  <span class="method-name">LoginTheSite</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -172,7 +160,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\actno\OneDrive\Desktop\SeleniumWebdriber\DemoWebShop\testng.xml</span>
+            <span class="header-content">C:\Users\actno\OneDrive\Desktop\SeleniumWebdriber\DemoWebShop\master.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -182,13 +170,13 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;utilities.ExtentReportManager&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;SearchToSimpleComputerToPurachaseOrder&quot;&gt;
     &lt;parameter name=&quot;os&quot; value=&quot;windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC003_SearchToSimpleComputerToPurachaseOrder&quot;/&gt;
+      &lt;class name=&quot;testCases.TC005_ClearTheCart&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- SearchToSimpleComputerToPurachaseOrder --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -200,7 +188,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">SearchToSimpleComputerToPurachaseOrder (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -214,19 +202,15 @@
               <span class="test-group-name">Master</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">CheckoutAndBillingPaymentDelhivery</span>
+                <span class="method-in-group-name">AddToCart</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">GoToCartAndCheckout</span>
+                <span class="method-in-group-name">GoToCartAndClear</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginPage</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">SearchProduct</span>
+                <span class="method-in-group-name">LoginTheSite</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -234,19 +218,15 @@
               <span class="test-group-name">Sanity</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">CheckoutAndBillingPaymentDelhivery</span>
+                <span class="method-in-group-name">AddToCart</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">GoToCartAndCheckout</span>
+                <span class="method-in-group-name">GoToCartAndClear</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginPage</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">SearchProduct</span>
+                <span class="method-in-group-name">LoginTheSite</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -266,28 +246,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'SearchProduct')
-data.setCell(0, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
-data.setCell(0, 3, 6710);
+data.setCell(0, 1, 'AddToCart')
+data.setCell(0, 2, 'testCases.TC005_ClearTheCart')
+data.setCell(0, 3, 6084);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'CheckoutAndBillingPaymentDelhivery')
-data.setCell(1, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
-data.setCell(1, 3, 4924);
+data.setCell(1, 1, 'GoToCartAndClear')
+data.setCell(1, 2, 'testCases.TC005_ClearTheCart')
+data.setCell(1, 3, 2125);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'GoToCartAndCheckout')
-data.setCell(2, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
-data.setCell(2, 3, 2955);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'LoginPage')
-data.setCell(3, 2, 'testCases.TC003_SearchToSimpleComputerToPurachaseOrder')
-data.setCell(3, 3, 2590);
+data.setCell(2, 1, 'LoginTheSite')
+data.setCell(2, 2, 'testCases.TC005_ClearTheCart')
+data.setCell(2, 3, 1789);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -313,30 +289,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC003_SearchToSimpleComputerToPurachaseOrder</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC005_ClearTheCart</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">LoginPage</span>
-                <span class="method-start">5628 ms</span>
+                <span class="method-name">LoginTheSite</span>
+                <span class="method-start">5486 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">SearchProduct</span>
-                <span class="method-start">8240 ms</span>
+                <span class="method-name">AddToCart</span>
+                <span class="method-start">7308 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">GoToCartAndCheckout</span>
-                <span class="method-start">14953 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">CheckoutAndBillingPaymentDelhivery</span>
-                <span class="method-start">17921 ms</span>
+                <span class="method-name">GoToCartAndClear</span>
+                <span class="method-start">13429 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22847 ms</span>
+                <span class="method-start">15559 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
